fix version button stretch on load

--- a/src/css/components/popover.css
+++ b/src/css/components/popover.css
@@ -14,11 +14,11 @@
 
 /* initial and hidden state */
 .js-version-popover {
-  visibility: hidden;
+  display: none;
 }
 
 .tippy-popper .js-version-popover {
-  visibility: visible;
+  display: block;
 }
 
 .tippy-popper .popover,
